--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "server": "nodemon idex.js",
+    "client": "npm start",
+    "dev": "concurrently \"npm start \" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
